keycloak/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
  namespace: chill-crate
spec:
  replicas: 1
  strategy:
    type: Recreate 
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      containers:
        - name: keycloak
          image: quay.io/keycloak/keycloak:26.7.0
          args: ["start"]
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "512Mi"
              cpu: "250m"
            limits:
              memory: "1Gi"
              cpu: "500m"
          startupProbe:
            httpGet:
              path: /health/started
              port: 9010
            periodSeconds: 1
            failureThreshold: 600
          readinessProbe:
            httpGet:
              path: /health/ready
              port: 9010
            periodSeconds: 10
            failureThreshold: 3  
            initialDelaySeconds: 5
          livenessProbe:
            httpGet:
              path: /health/live
              port: 9010
            periodSeconds: 10
            failureThreshold: 3
