keycloak/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak
  namespace: chill-crate
spec:
  selector:
    app: keycloak
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
